Moved the systems to the json file, need to implement the shadow system, and there seems to be a issue with the riggedanimationsystem

--- a/Game-Test1/Game-Test1.vcxproj.filters
+++ b/Game-Test1/Game-Test1.vcxproj.filters
@@ -163,6 +163,9 @@
     <None Include="Shaders\RiggedShadowMapping.vert">
       <Filter>Shaders</Filter>
     </None>
+    <None Include="3DLevelGuardFunctions.lua">
+      <Filter>Scripts</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Text Include="3DLevel.txt">
