Started to create the menus

--- a/Game-Test1/Game-Test1.vcxproj
+++ b/Game-Test1/Game-Test1.vcxproj
@@ -260,6 +260,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="3DLevelGuardFunctions.lua" />
+    <None Include="GameChoosing.json" />
     <None Include="Models\Test.dae" />
     <None Include="Shaders\RiggedFragment.frag" />
     <None Include="Shaders\RiggedPointShadow.frag" />
