--- a/GameEngine/GameEngine.vcxproj
+++ b/GameEngine/GameEngine.vcxproj
@@ -137,6 +137,7 @@
     <ClCompile Include="Bone.cpp" />
     <ClCompile Include="BulletPhysicsEngine.cpp" />
     <ClCompile Include="BulletRigidBody.cpp" />
+    <ClCompile Include="Button.cpp" />
     <ClCompile Include="CameraManager.cpp" />
     <ClCompile Include="CollisionCuboid.cpp" />
     <ClCompile Include="CollisionShape.cpp" />
@@ -175,6 +176,9 @@
     <ClCompile Include="LightManager.cpp" />
     <ClCompile Include="LocationSound.cpp" />
     <ClCompile Include="LoggingManager.cpp" />
+    <ClCompile Include="MenuItem.cpp" />
+    <ClCompile Include="MenuLoader.cpp" />
+    <ClCompile Include="MenuScene.cpp" />
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="ModelLoader.cpp" />
     <ClCompile Include="Node.cpp" />
@@ -196,6 +200,7 @@
     <ClCompile Include="ShadowSystem.cpp" />
     <ClCompile Include="StaticModel.cpp" />
     <ClCompile Include="SystemManager.cpp" />
+    <ClCompile Include="Text.cpp" />
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="Vec3AnimKey.cpp" />
     <ClCompile Include="Window.cpp" />
@@ -211,6 +216,7 @@
     <ClInclude Include="Bone.h" />
     <ClInclude Include="BulletPhysicsEngine.h" />
     <ClInclude Include="BulletRigidBody.h" />
+    <ClInclude Include="Button.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="CameraManager.h" />
     <ClInclude Include="CollisionCuboid.h" />
@@ -248,6 +254,9 @@
     <ClInclude Include="LightManager.h" />
     <ClInclude Include="LocationSound.h" />
     <ClInclude Include="LoggingManager.h" />
+    <ClInclude Include="MenuItem.h" />
+    <ClInclude Include="MenuLoader.h" />
+    <ClInclude Include="MenuScene.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="ModelLoader.h" />
     <ClInclude Include="Node.h" />
@@ -269,6 +278,7 @@
     <ClInclude Include="ShadowSystem.h" />
     <ClInclude Include="StaticModel.h" />
     <ClInclude Include="SystemManager.h" />
+    <ClInclude Include="Text.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="Vec3AnimKey.h" />
     <ClInclude Include="Window.h" />
