--- a/GameEngine/GameEngine.vcxproj.filters
+++ b/GameEngine/GameEngine.vcxproj.filters
@@ -294,12 +294,15 @@
     <ClCompile Include="Button.cpp">
       <Filter>Menu</Filter>
     </ClCompile>
-    <ClCompile Include="MenuScene.cpp">
-      <Filter>Menu</Filter>
-    </ClCompile>
     <ClCompile Include="MenuLoader.cpp" />
     <ClCompile Include="TextRender.cpp">
       <Filter>Menu</Filter>
+    </ClCompile>
+    <ClCompile Include="MenuScene.cpp">
+      <Filter>Scene Manager</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Game-Test1\GameScene.cpp">
+      <Filter>Scene Manager</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -523,12 +526,15 @@
     <ClInclude Include="Button.h">
       <Filter>Menu</Filter>
     </ClInclude>
-    <ClInclude Include="MenuScene.h">
-      <Filter>Menu</Filter>
-    </ClInclude>
     <ClInclude Include="MenuLoader.h" />
     <ClInclude Include="TextRender.h">
       <Filter>Menu</Filter>
+    </ClInclude>
+    <ClInclude Include="MenuScene.h">
+      <Filter>Scene Manager</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Game-Test1\GameScene.h">
+      <Filter>Scene Manager</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
