--- a/Game-Test1/Game-Test1.vcxproj.filters
+++ b/Game-Test1/Game-Test1.vcxproj.filters
@@ -170,6 +170,15 @@
     <None Include="SuperWorldMainMenu.lua">
       <Filter>Scripts</Filter>
     </None>
+    <None Include="HitBoxMainMenu.json">
+      <Filter>Menus</Filter>
+    </None>
+    <None Include="SuperWorldMenu.json">
+      <Filter>Menus</Filter>
+    </None>
+    <None Include="Options.json">
+      <Filter>Menus</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Text Include="3DLevel.txt">
