Can now create bullets within lua. Started work on animation.

--- a/Game-Test1/Game-Test1.vcxproj.filters
+++ b/Game-Test1/Game-Test1.vcxproj.filters
@@ -191,4 +191,9 @@
       <Filter>Levels</Filter>
     </Text>
   </ItemGroup>
+  <ItemGroup>
+    <Object Include="Models\bullet.obj">
+      <Filter>Models</Filter>
+    </Object>
+  </ItemGroup>
 </Project>
