--- a/Game-Test1/Game-Test1.vcxproj
+++ b/Game-Test1/Game-Test1.vcxproj
@@ -273,6 +273,12 @@
   <ItemGroup>
     <Text Include="3DLevel.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <Object Include="Models\bullet.obj">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </Object>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
     <Import Project="..\packages\glm.0.9.9\build\native\glm.targets" Condition="Exists('..\packages\glm.0.9.9\build\native\glm.targets')" />
