--- a/GameEngine/GameEngine.vcxproj
+++ b/GameEngine/GameEngine.vcxproj
@@ -132,6 +132,7 @@
     <ClCompile Include="AIStateMachine.cpp" />
     <ClCompile Include="AnimatedModel.cpp" />
     <ClCompile Include="Animation.cpp" />
+    <ClCompile Include="AnimationSystem.cpp" />
     <ClCompile Include="AnimNode.cpp" />
     <ClCompile Include="ArtificialIntelligenceSystem.cpp" />
     <ClCompile Include="AudioManager.cpp" />
@@ -144,6 +145,7 @@
     <ClCompile Include="CollisionCuboid.cpp" />
     <ClCompile Include="CollisionShape.cpp" />
     <ClCompile Include="CollisionSphere.cpp" />
+    <ClCompile Include="ComponentAnimation.cpp" />
     <ClCompile Include="ComponentArtificalIntelligence.cpp" />
     <ClCompile Include="ComponentAudio.cpp" />
     <ClCompile Include="ComponentDirection.cpp" />
@@ -155,6 +157,7 @@
     <ClCompile Include="ComponentRiggedAnimation.cpp" />
     <ClCompile Include="ComponentShader.cpp" />
     <ClCompile Include="ComponentShadowShader.cpp" />
+    <ClCompile Include="ComponentState.cpp" />
     <ClCompile Include="ComponentTexture.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="EntityManager.cpp" />
@@ -213,6 +216,7 @@
     <ClInclude Include="AIStateMachine.h" />
     <ClInclude Include="AnimatedModel.h" />
     <ClInclude Include="Animation.h" />
+    <ClInclude Include="AnimationSystem.h" />
     <ClInclude Include="AnimNode.h" />
     <ClInclude Include="ArtificialIntelligenceSystem.h" />
     <ClInclude Include="AudioManager.h" />
@@ -226,6 +230,7 @@
     <ClInclude Include="CollisionCuboid.h" />
     <ClInclude Include="CollisionShape.h" />
     <ClInclude Include="CollisionSphere.h" />
+    <ClInclude Include="ComponentAnimation.h" />
     <ClInclude Include="ComponentArtificalIntelligence.h" />
     <ClInclude Include="ComponentAudio.h" />
     <ClInclude Include="ComponentDirection.h" />
@@ -237,6 +242,7 @@
     <ClInclude Include="ComponentRiggedAnimation.h" />
     <ClInclude Include="ComponentShader.h" />
     <ClInclude Include="ComponentShadowShader.h" />
+    <ClInclude Include="ComponentState.h" />
     <ClInclude Include="ComponentTexture.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="EntityManager.h" />
