--- a/Assimp/Assimp.vcxproj
+++ b/Assimp/Assimp.vcxproj
@@ -39,13 +39,13 @@
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
@@ -76,8 +76,9 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)\assimp-4.1.0\assimp-4.1.0\contrib\zlib;$(SolutionDir)\assimp-4.1.0\assimp-4.1.0\contrib;$(SolutionDir)\assimp-4.1.0\assimp-4.1.0\contrib\irrXML;$(SolutionDir)\assimp-4.1.0\assimp-4.1.0\;$(SolutionDir)\assimp-4.1.0\assimp-4.1.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;_SCL_SECURE_NO_WARNINGS;ASSIMP_BUILD_NO_C4D_IMPORTER;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>$(SolutionDir)\assimp-4.1.0\assimp-4.1.0\contrib\openddlparser\include;$(SolutionDir)\assimp-4.1.0\assimp-4.1.0\contrib\rapidjson\include;$(SolutionDir)\assimp-4.1.0\assimp-4.1.0\contrib\zlib;$(SolutionDir)\assimp-4.1.0\assimp-4.1.0\contrib;$(SolutionDir)\assimp-4.1.0\assimp-4.1.0\contrib\irrXML;$(SolutionDir)\assimp-4.1.0\assimp-4.1.0\;$(SolutionDir)\assimp-4.1.0\assimp-4.1.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;_SCL_SECURE_NO_WARNINGS;ASSIMP_BUILD_NO_C4D_IMPORTER;WIN32;_WINDOWS;WIN32_LEAN_AND_MEAN;OPENDDL_NO_USE_CPP11;ASSIMP_BUILD_NO_X3D_IMPORTER;ASSIMP_BUILD_NO_X3D_EXPORTER;ASSIMP_IMPORTER_GLTF_USE_OPEN3DGC=1;ASSIMP_BUILD_DLL_EXPORT;OPENDDLPARSER_BUILD;CMAKE_INTDIR="Debug";assimp_EXPORTS;ASSIMP_BUILD_NO_GLTF_IMPORTER;ASSIMP_BUILD_NO_GLTF_EXPORTER;ASSIMP_BUILD_NO_BLEND_IMPORTER;ASSIMP_BUILD_NO_OPENGEX_IMPORTER;ASSIMP_BUILD_NO_IFC_IMPORTER;ASSIMP_BUILD_NO_EXPORT;ASSIMP_BUILD_NO_Q3BSP_IMPORTER;ASSIMP_BUILD_NO_3MF_IMPORTER;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalOptions>/bigobj %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -110,6 +111,8 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>$(SolutionDir)\assimp-4.1.0\assimp-4.1.0\contrib\openddlparser\include;$(SolutionDir)\assimp-4.1.0\assimp-4.1.0\contrib\rapidjson\include;$(SolutionDir)\assimp-4.1.0\assimp-4.1.0\contrib\zlib;$(SolutionDir)\assimp-4.1.0\assimp-4.1.0\contrib;$(SolutionDir)\assimp-4.1.0\assimp-4.1.0\contrib\irrXML;$(SolutionDir)\assimp-4.1.0\assimp-4.1.0\;$(SolutionDir)\assimp-4.1.0\assimp-4.1.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;_SCL_SECURE_NO_WARNINGS;ASSIMP_BUILD_NO_C4D_IMPORTER;WIN32;_WINDOWS;WIN32_LEAN_AND_MEAN;OPENDDL_NO_USE_CPP11;ASSIMP_BUILD_NO_X3D_IMPORTER;ASSIMP_BUILD_NO_X3D_EXPORTER;ASSIMP_IMPORTER_GLTF_USE_OPEN3DGC=1;ASSIMP_BUILD_DLL_EXPORT;OPENDDLPARSER_BUILD;CMAKE_INTDIR="Debug";assimp_EXPORTS;ASSIMP_BUILD_NO_GLTF_IMPORTER;ASSIMP_BUILD_NO_GLTF_EXPORTER;ASSIMP_BUILD_NO_BLEND_IMPORTER;ASSIMP_BUILD_NO_OPENGEX_IMPORTER;ASSIMP_BUILD_NO_IFC_IMPORTER;ASSIMP_BUILD_NO_EXPORT;ASSIMP_BUILD_NO_Q3BSP_IMPORTER;ASSIMP_BUILD_NO_3MF_IMPORTER;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
@@ -569,6 +572,14 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="..\assimp-4.1.0\assimp-4.1.0\code\CMakeLists.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\IrrXML\IrrXML.vcxproj">
+      <Project>{20893917-90e8-496e-aa80-d2d7eb14326c}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\zlibstatic\zlibstatic.vcxproj">
+      <Project>{6524729b-f799-4c16-8d19-4d0d008633d8}</Project>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
