can now win the game in the platformer, need to do the same for the 3d game

--- a/Game-Test1/Game-Test1.vcxproj
+++ b/Game-Test1/Game-Test1.vcxproj
@@ -261,6 +261,7 @@
     <None Include="GameChoosing.lua" />
     <None Include="HitBoxMainMenu.json" />
     <None Include="HitBoxMainMenu.lua" />
+    <None Include="LoseScene.json" />
     <None Include="Models\Test.dae" />
     <None Include="Options.json" />
     <None Include="packages.config" />
@@ -279,6 +280,7 @@
     <None Include="SuperWorldMenu.json" />
     <None Include="TextFragment.frag" />
     <None Include="TextVertex.vert" />
+    <None Include="WinScene.json" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="3DLevel.txt" />
