Worked on the design of the level

--- a/Game-Test1/Game-Test1.vcxproj
+++ b/Game-Test1/Game-Test1.vcxproj
@@ -284,6 +284,7 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="3DLevel.txt" />
+    <Text Include="3DLevelFull.txt" />
   </ItemGroup>
   <ItemGroup>
     <Object Include="Models\bullet.obj">
