--- a/Game-Test1/Game-Test1.vcxproj.filters
+++ b/Game-Test1/Game-Test1.vcxproj.filters
@@ -196,6 +196,51 @@
     <None Include="LoseScene.json">
       <Filter>Menus</Filter>
     </None>
+    <None Include="Models\boxanim.dae">
+      <Filter>Models</Filter>
+    </None>
+    <None Include="Models\bullet.mtl">
+      <Filter>Models</Filter>
+    </None>
+    <None Include="Models\Monster_1.dae">
+      <Filter>Models</Filter>
+    </None>
+    <None Include="Models\person1anim.dae">
+      <Filter>Models</Filter>
+    </None>
+    <None Include="Models\personanim.dae">
+      <Filter>Models</Filter>
+    </None>
+    <None Include="Models\personanim1.dae">
+      <Filter>Models</Filter>
+    </None>
+    <None Include="Models\player.dae">
+      <Filter>Models</Filter>
+    </None>
+    <None Include="Models\player2.dae">
+      <Filter>Models</Filter>
+    </None>
+    <None Include="Models\player3.dae">
+      <Filter>Models</Filter>
+    </None>
+    <None Include="Models\player4.dae">
+      <Filter>Models</Filter>
+    </None>
+    <None Include="Models\playeranim.dae">
+      <Filter>Models</Filter>
+    </None>
+    <None Include="Models\playertest5.dae">
+      <Filter>Models</Filter>
+    </None>
+    <None Include="Models\untitled.dae">
+      <Filter>Models</Filter>
+    </None>
+    <None Include="Models\untitled2.dae">
+      <Filter>Models</Filter>
+    </None>
+    <None Include="Models\untitled3.dae">
+      <Filter>Models</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Text Include="3DLevel.txt">
@@ -209,5 +254,22 @@
     <Object Include="Models\bullet.obj">
       <Filter>Models</Filter>
     </Object>
+    <Object Include="Models\pixelcircle.obj">
+      <Filter>Models</Filter>
+    </Object>
+    <Object Include="Models\pixelcirclecorner.obj">
+      <Filter>Models</Filter>
+    </Object>
+    <Object Include="Models\pixelcirclemiddle.obj">
+      <Filter>Models</Filter>
+    </Object>
+    <Object Include="Models\pixelcircleside.obj">
+      <Filter>Models</Filter>
+    </Object>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="\\adir.hull.ac.uk\home\538\538704\Desktop\tiletexture.jpg">
+      <Filter>Textures</Filter>
+    </Image>
   </ItemGroup>
 </Project>
